# Implementation_of_PMM_by_MICE

./: .gitignore  Examples.py  LICENSE  MICEimputer.py  README.md  Sim.py  Utils.py  example_usage.py  mice.py  predictorMatrix.py  pyproject.toml  readthedocs.yaml  requirements.txt  sampler.py  test.py
Simulations/: Sim.py
analysis/: __init__.py  test.py
data/: README.md  fdgs.csv  nhanes2.csv  nhanes_large_descriptions.json
diagnostics/: README.md  example.ipynb  plots.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  modules.rst
docs/source/imputation/: Auxiliary.rst  index.rst  mice.rst  midas.rst
docs/source/simulation/: index.rst
imputation/: MICEimputer.py  PMM.py  Utils.py  __init__.py  cart.py  checks.py  helpers.py  mean.py  mice.py  midas.py  miles.py  pmm.R  predictorMatrix.py  rf.R  rf.py  sample.py  sampler.py
imputation/zh/: MICE.py  constants.py  pool.R  showcase.py  utils.py  validators.py
plotting/: __init__.py  diagnostics.py  utils.py
simulations/: Sim.py  simulation_df.csv
tests/: statsmodel_compare.py  test.py
visualization/: example.ipynb  utils.py
