[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "MI_with_PMM_midas_Theanh"
version = "0.0.1"
authors = [
  { name="The Anh Vu", email="Theanh_v99@yahoo.de" },
]
description = "Implementation of PMM, Midas and Miles for MICE"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/Theanh2/Implementation-of-PMM-and-Variations"
