[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PMMmidas"
version = "0.1.0"
description = "Implementation of PMM and MICE in Python."
readme = "README.md"
authors = [{name = "The Anh Vu", email = "Theanh_v99@yahoo.de"}]
license = "MIT" # or whichever license you use
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "patsy",
    "scikit-learn",
    "scipy",
    "statsmodels",
    "tqdm"
]

[tool.setuptools]
packages = ["imputation", "simulations"]